fixed mobile header align, added 30 day discord invite

--- a/css/scss/_mindy-light.scss
+++ b/css/scss/_mindy-light.scss
@@ -147,7 +147,6 @@ header {
     z-index: 99;
     background-color: #12002fae;
 
-    // background-color: #12002F;
     .container {
         padding-top: 8px;
         padding-bottom: 8px;
@@ -163,6 +162,8 @@ header {
             text-transform: uppercase;
             font-size: 22px;
             font-weight: 900;
+            padding: 6px;
+            padding-right: 12px;
 
 
         }
