--- a/css/styles.css
+++ b/css/styles.css
@@ -155,6 +155,8 @@ header .container h2 {
   text-transform: uppercase;
   font-size: 22px;
   font-weight: 900;
+  padding: 6px;
+  padding-right: 12px;
 }
 header .container nav {
   display: grid;
